--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "build": "turbo run build",
         "dev": "next dev",
-        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
@@ -23,6 +23,7 @@
         "eslint-config-next": "13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "typescript": "^5",
+        "turbo": "latest"
     }
 }
