--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "turbo run build",
+        "build": "turbo build",
         "dev": "next dev",
         "start": "next start",
         "lint": "next lint"
@@ -24,6 +24,6 @@
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5",
-        "turbo": "latest"
+        "turbo": "1.10.4"
     }
 }
