--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "turbo build",
+        "build": "next build",
         "dev": "next dev",
         "start": "next start",
         "lint": "next lint"
@@ -23,7 +23,6 @@
         "eslint-config-next": "13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5",
-        "turbo": "1.10.4"
+        "typescript": "^5"
     }
 }
